Solve issue: drag handlers have min-height too big

--- a/src/ColumnsBlock/styles.less
+++ b/src/ColumnsBlock/styles.less
@@ -152,6 +152,10 @@
       margin-bottom: 0.3em;
     }
 
+    .drag.handle.wrapper {
+      min-height: auto;
+    }
+
     .column-area {
       display: flex;
 
